# chain

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  chain  chain.config.example.yaml  finch-progress-over-time.md  pyproject.toml
.claude/agents/: chain-discoverer.md  chain-evaluator.md  chain-intake.md  chain-writer.md
ENGINE__PUBLIC_GIT_TRACKED/canon/: discover-lenses.md  intake-interview-guide.md  positioning-pillars.template.md
ENGINE__PUBLIC_GIT_TRACKED/chain/: changelog_core.py  changelog_sync.py  config.py  discover.py  doctor.py  editorial_library.py  ingest.py  produce.py
canon/: anti-patterns.template.md  audience-and-outcomes.template.md  editorial-principles.template.md  editorial-themes.template.md  exemplar-index.template.md  feedback-ledger.template.md  lint-overrides.template.md  story-bank.template.md  voice-spec.template.md
canon/channels/: linkedin.md  medium.md  (+1 more)
chain/: __init__.py  bundle.py  changelog_core.py  changelog_sync.py  config.py  discover.py  doctor.py  editorial_library.py  ingest.py  intake.py  lint_draft.py  normalize.py  path_safety.py  produce.py  scratch_probe_module.py  selection.py  sources.py
docs/: architecture.md  changelog.md  future-work.md  packet.md  privacy.md  sources.md
examples/: demo-studio.config.yaml  demo.config.yaml  sample-bundle-packet.md  sample-draft-packet.md
tests/: test_bundle.py  test_changelog_core.py  test_discover.py  test_id_integrity.py  test_ingest_idempotent.py  test_intake.py  test_lint_draft.py  test_normalize.py  test_orphaned_references.py  test_path_safety.py  test_produce.py
(+66 files in other folders)
